# pov-agent

./: .agent_harness.yaml  .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  THIRD_PARTY.md  analysis_options.yaml  milestones.md  pubspec.yaml
.agent_harness/: baseline.json
.codex/agents/: harness-async-state.toml  harness-boundary-flow.toml  harness-comments-policy.toml  harness-composition.toml  harness-finding-verifier.toml  harness-readability.toml  harness-tests-behavior.toml  harness-ui-navigation.toml
android/app/: build.gradle.kts
assets/audio/: README.md  hands_free_question_en_us.pcm
assets/models/: README.md
assets/video/: README.md
docs/: DESIGN.md  USER_FLOW.md  ms4-finish.md  ms5-finish.md  ms6-finish.md  ms7-finish.md
hook/: build.dart
integration_test/: app_flow_test.dart  assistant_hardware_soak_test.dart  assistant_native_smoke_test.dart  camera_hardware_test.dart  hands_free_live_microphone_test.dart  hands_free_native_test.dart  model_storage_channel_test.dart  observer_native_soak_test.dart  piper_speech_native_test.dart  recorded_app_flow_test.dart  recorded_video_decoder_test.dart  recorded_yolo_replay_test.dart  system_speech_native_test.dart
integration_test/fixtures/: recorded_bus_sequence.dart
ios/: Podfile
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: AppDelegate.swift  BackgroundModelDownloadChannel.swift  Info.plist  ModelDiskCapacityChannel.swift  RecordedVideoFrameChannel.swift  SceneDelegate.swift
ios/Runner.xcodeproj/: project.pbxproj
ios/RunnerTests/: RunnerTests.swift
lib/: main.dart
lib/app/: app.dart
lib/l10n/: app_en.arb  app_en_US.arb
native/: CMakeLists.txt
native/llama_bridge/: exports.txt  llama_bridge.cpp  llama_bridge.h
test/: widget_test.dart
test/support/: README.md  assistant_acceptance_durations.dart  (+4 more)
test_driver/: integration_test.dart
tool/: harness.dart  verify_android.sh  verify_assistant_device_ios.sh  verify_assistant_ios.sh  verify_hands_free_device_ios.sh  verify_hands_free_ios.sh  verify_hands_free_live_device_ios.sh  verify_observer_device_ios.sh  verify_observer_ios.sh  verify_piper_android.sh  verify_piper_device_ios.sh  verify_piper_ios.sh  verify_recorded_ios.sh  verify_speech_ios.sh
(+267 files in other folders)
